--- a/src/components/CardList/CardList.module.css
+++ b/src/components/CardList/CardList.module.css
@@ -33,6 +33,11 @@
 
 }
 
+/* .wrappDes{
+    display: flex;
+    height: 38px;justify-content: center;
+} */
+
 .description {
     width: 290px;
     max-height: 32px;
@@ -45,7 +50,7 @@
     font-weight: 400;
     line-height: 16px;
     letter-spacing: -0.24px;
-    margin-bottom: 17px;
+    margin-bottom: 14px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
@@ -56,6 +61,31 @@
     max-height: none;
     -webkit-line-clamp: unset;
 }
+
+
+/* .description {
+    width: 290px;
+    max-height: 32px; 
+    overflow: hidden;
+    color: rgba(22, 22, 22, 0.70);
+    text-overflow: ellipsis;
+    font-family: Poppins;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: -0.24px;
+    margin-bottom: 14px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; 
+    cursor: pointer; 
+}
+
+.expanded {
+    max-height: none; 
+    -webkit-line-clamp: unset;
+} */
 
 
 .title {
@@ -74,7 +104,7 @@
     width: 291px;
     height: 1px;
     background-color: rgba(22, 22, 22, 0.10);
-    margin-bottom: 17px;
+    margin-bottom: 14px;
 
 }
 
