--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -8,7 +8,6 @@
     margin-left: -14px;
     margin-top: -14px;
     border-radius: 8px 0 0 8px;
-    ;
 }
 
 .card {
@@ -40,7 +39,7 @@
     font-weight: 400;
     line-height: 16px;
     letter-spacing: -0.24px;
-    margin-bottom: 14px;
+    margin-bottom: 18px;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
@@ -48,6 +47,7 @@
 }
 
 .expanded {
+    z-index: 100;
     position: absolute;
     top: 43px;
     left: 14px;
@@ -90,7 +90,7 @@
     font-weight: 600;
     line-height: normal;
     letter-spacing: -0.28px;
-    margin-bottom: 8px;
+    margin-bottom: 11px;
 }
 
 .line {
@@ -130,6 +130,7 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.16px;
+    margin-bottom: 4px;
 
 
     span {
@@ -146,6 +147,8 @@
 }
 
 .priority {
+    display: flex;
+    flex-direction: column;
     color: rgba(22, 22, 22, 0.50);
     font-family: Poppins;
     font-size: 8px;
@@ -153,7 +156,8 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.16px;
-    margin-bottom: 4px;
+
+
 }
 
 .buttons {
@@ -162,6 +166,7 @@
     gap: 8px;
 
     button {
+        padding: 0;
         border: none;
         background-color: transparent;
     }
@@ -179,4 +184,29 @@
     margin-left: 8px;
     fill: none;
     stroke: #BEDBB0;
+}
+
+.label {
+    position: relative;
+    margin-left: 16px;
+    color: #161616;
+    font-family: Poppins;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.2px;
+    margin-top: 4px;
+}
+
+.label::before {
+    content: "";
+    display: block;
+    height: 12px;
+    width: 12px;
+    background-color: var(--card-color);
+    position: absolute;
+    margin-left: -16px;
+    margin-top: 2px;
+    border-radius: 50%;
 }
