--- a/src/components/Dropdown/Dropdown.module.css
+++ b/src/components/Dropdown/Dropdown.module.css
@@ -3,13 +3,14 @@
 } */
 
 .dropdown {
+    z-index: 100;
     display: block;
     padding: 18px;
     border-radius: 8px;
     width: 135px;
     height: 86px;
     background-color: #FCFCFC;
-    box-shadow: 0px 4px 16px 0px rgba(17, 17, 17, 0.10);
+    box-shadow: 0px 4px 16px 0px rgb(181, 198, 174);
     position: absolute;
     margin-right: 50px;
     right: 0;
