--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -146,7 +146,7 @@
 
 .icon {
     fill: transparent;
-    stroke: #16161680;
+    stroke: #38353580;
 }
 
 .icon:hover,
@@ -186,4 +186,10 @@
     margin-left: -16px;
     margin-top: 2px;
     border-radius: 50%;
+}
+
+.move:disabled{
+    .icon {
+       stroke: #38353580;;
+    }
 }
