--- a/src/components/Column/Column.module.css
+++ b/src/components/Column/Column.module.css
@@ -19,3 +19,41 @@
     }
 
 }
+
+.addBtn {
+    align-self: stretch;
+    margin-top: auto;
+    border-radius: 8px;
+    width: 100%;
+    height: 49px;
+    background-color: var(--main-color);
+    border: none;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: -0.02em;
+    color: var(--black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-top: 4px;
+}
+
+.addBtn:hover {
+    cursor: pointer;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    background-color: var(--accent-color);
+}
+
+.plusIcon {
+    width: 28px;
+    height: 28px;
+    background-color: #161616;
+    /* background-color: var(--columnPlus-bg-color); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
+    stroke: white;
+    /* stroke: var(--main-iconPlus-color); */
+}
